# demand_forecasting_pipeline

./: .cache.sqlite  .gitignore  databricks.yml  pyproject.toml  requirements.txt
notebooks/: test.ipynb  test_demand.ipynb
resources/: hello_world.job.yml  hello_world_2.job.yml  ingest.job.yml
src/: hello_world.py
src/ingestion/: .cache.sqlite  config.py  demand_api.py  test.ipynb  test_demand.ipynb  weather_api.py
