[project]
name = "demand_forecasting_pipeline"
version = "0.0.1"
authors = [{ name = "Eryk" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=17.3,<17.4",
    "ipykernel",
]

[project.scripts]
main = "ingestion.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
